tests/snapshots/examples_fixtures/type_system__failing__178_import_except_missing_open_bracket.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/178_import_except_missing_open_bracket.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Import Except List

Expected `[` after `except` in import.

  examples/type_system/failing/178_import_except_missing_open_bracket.flx:20:23
   |
20 | import Foo.Bar except x, y ]
   |                       ^

Hint:
  Import exclusions use `import Module except [Name1, Name2]`.
== stdout ==
<not executed>
